[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netboxk-kea-updater"
dynamic = ["version"]
authors = [{name = "Simon Rance", email="sirance@gmail.com"},]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependenices = [
    "pynetbox~=7.0.1",
    "click~=8.0.1",
    "pykeadhcp~=0.6.0"
]

[project.urls]
Homepage = "https://github.com/sirance/netbox-kea-updater"

[project.scripts]
netbox_kea_updater = "netbox_kea_updater.netbox_kea_updater:cli

[tool.hatch.version]
path = "src/netbox_kea_updater/__about__.py"

[tool.hatch.build]
sources = ["src"]