[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netbox-kea-updater"
dynamic = ["version"]
authors = [{name = "Simon Rance", email=""},]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "pynetbox~=7.0.1",
    "click~=8.0.1",
    "pykeadhcp~=0.6.0"
]

[project.urls]
Homepage = "https://github.com/sirance/netbox-kea-updater"

[project.scripts]
netbox_kea_updater = "netbox_kea_updater.netbox_kea_updater:cli"

[tool.hatch.version]
path = "src/netbox_kea_updater/__about__.py"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/netbox_kea_updater"]